# guile-sdl2

./: .dir-locals.el  .gitignore  AUTHORS  Makefile.am  README  configure.ac  guix.scm  pre-inst-env.in  run-example  sdl2.scm
doc/: api.texi  guile-sdl2.texi  manual.css
examples/: blank-window.scm  controller.scm  hello.scm
sdl2/: audio.scm  bindings.scm  blend-mode.scm  config.scm.in  events.scm  hints.scm  image.scm  rect.scm  render.scm  surface.scm  ttf.scm  video.scm
sdl2/bindings/: image.scm  mixer.scm  ttf.scm
sdl2/input/: game-controller.scm  joystick.scm  keyboard.scm  mouse.scm  sensor.scm
